--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
         <module>api</module>
         <module>client</module>
         <module>server</module>
+        <module>net</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>parent-pom</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>Chronicle-Accelerate/Parent-Pom</name>
     <description>Chronicle-Accelerate (XCL) Parent Pom</description>
     <packaging>pom</packaging>
