--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,12 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>parent-pom</artifactId>
-        <groupId>cash.xr8</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <groupId>cash.xcl</groupId>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>server</artifactId>
+    <name>Chronicle-Accelerate/Server</name>
+    <description>Chronicle-Accelerate Server</description>
 
 
 </project>
