--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,5 +13,17 @@
     <name>Chronicle-Accelerate/API</name>
     <description>Chronicle-Accelerate API</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-wire</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cash.xcl</groupId>
+            <artifactId>net</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
