--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
     </parent>
     <groupId>cash.xcl</groupId>
     <modules>
-        <module>api</module>
-        <module>client</module>
-        <module>server</module>
         <module>net</module>
+        <module>api</module>
+        <!--<module>client</module>-->
+        <!--<module>server</module>-->
     </modules>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>parent-pom</artifactId>
