added codes for Spanish provinces to excluded.yaml

--- a/api/src/main/resources/cash/xcl/api/util/excluded.yaml
+++ b/api/src/main/resources/cash/xcl/api/util/excluded.yaml
@@ -1,4 +1,59 @@
 [
+# SPAIN:
+# All provinces in Spain are excluded as
+# they are all already covered by
+# the Spanish Autonomous Communities codes.
+ES-C,
+ES-VI,
+ES-AB,
+ES-A,
+ES-AL,
+ES-O,
+ES-AV,
+ES-BA,
+ES-PM,
+ES-B,
+ES-BU,
+ES-CC,
+ES-CA,
+ES-S,
+ES-CS,
+ES-CR,
+ES-CO,
+ES-CU,
+ES-GI,
+ES-GR,
+ES-GU,
+ES-SS,
+ES-H,
+ES-HU,
+ES-J,
+ES-LO,
+ES-GC,
+ES-LE,
+ES-L,
+ES-LU,
+ES-M,
+ES-MA,
+ES-MU,
+ES-NA,
+ES-OR,
+ES-P,
+ES-PO,
+ES-SA,
+ES-TF,
+ES-SG,
+ES-SE,
+ES-SO,
+ES-T,
+ES-TE,
+ES-TO,
+ES-V,
+ES-VA,
+ES-BI,
+ES-ZA,
+ES-Z,
+
 # Provinces overlap the Counties
 IE-C,
 IE-L,
