--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
     <dependencies>
         <dependency>
             <groupId>net.openhft</groupId>
+            <artifactId>chronicle-bytes</artifactId>
+            <version>1.10.14-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
             <artifactId>chronicle-salt</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
