Add a failing test with timestamps.

--- a/server/src/test/resources/post-block-chain/create-new-address/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address/out.yaml
@@ -1,7 +1,7 @@
 to: 2
 createNewAddressEvent: {
-  sourceAddress: 0,
-  eventTime: 0,
+  sourceAddress: 121212121212,
+  eventTime: 12345678920000,
   origSourceAddress: 2,
   origEventTime: 0,
   address: -2419021951110769737,
