--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,4 +27,23 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+    <plugins>
+       <plugin>
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <version>1.2.5</version>
+          <configuration>
+            <verbose>false</verbose>
+            <enableAssertions>true</enableAssertions>
+             <targetClasses>
+                <param>cash.xcl.server.exch*</param>
+            </targetClasses>
+            <targetTests>
+                <param>cash.xcl.server.exch*</param>
+            </targetTests>
+          </configuration>
+        </plugin>
+        </plugins>    
+    </build>
 </project>
