--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>api</module>
     <!--<module>client</module>-->
     <module>server</module>
+      <module>exchange</module>
   </modules>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>parent-pom</artifactId>
