--- a/exchange/src/test/resources/exchange/new-limit-order/out.yaml
+++ b/exchange/src/test/resources/exchange/new-limit-order/out.yaml
@@ -6,6 +6,8 @@ executionReportEvent: {
   eventTime: 12345678920000,
   clientAddress: 2,
   clientOrderId: clientId,
+  symbol1symbol2: USDXCH,
+  isBuy: true,
   price: 3.5,
   quantityFilled: 100.0,
   quantityRemaining: 0.0
@@ -16,6 +18,8 @@ executionReportEvent: {
   eventTime: 12345678920000,
   clientAddress: 3,
   clientOrderId: clientId,
+  symbol1symbol2: USDXCH,
+  isBuy: false,
   price: 3.5,
   quantityFilled: 100.0,
   quantityRemaining: 0.0
