--- a/exchange/src/test/resources/exchange/new-market-order/out.yaml
+++ b/exchange/src/test/resources/exchange/new-market-order/out.yaml
@@ -39,4 +39,13 @@ executionReportEvent: {
   quantityFilled: 50.0,
   quantityRemaining: 0.0
 }
+to: 1152921504606846976
+, # 20060714T23:58:24.6068846976
+exchangeRateEvent: {
+  sourceAddress: 321321321321,
+  eventTime: 12345678920000,
+  symbol1symbol2: USDXCH,
+  midPrice: 3.5,
+  spreadPrice: 0.1
+}
 ---
