Added a simple exchange rate prices test

--- a/api/src/test/resources/marshaling/cancelordercommand.yaml
+++ b/api/src/test/resources/marshaling/cancelordercommand.yaml
@@ -1,5 +1,5 @@
 Valid Cancel Order Command: {
- input: !cash.xcl.api.exch.CancelOrderCommand {
+ input: !CancelOrderCommand {
     sourceAddress: 1234,
     eventTime: 12345,
     orderTime: 12340
