--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,12 @@
   </parent>
   <groupId>cash.xcl</groupId>
   <modules>
+    <module>docgen</module>
     <module>net</module>
     <module>api</module>
     <!--<module>client</module>-->
     <module>server</module>
-      <module>exchange</module>
+    <module>exchange</module>
   </modules>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>parent-pom</artifactId>
