--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,17 @@
     <relativePath/>
   </parent>
   <groupId>cash.xcl</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>parent-pom</artifactId>
   <modules>
     <module>docgen</module>
+      <module>util</module>
     <module>net</module>
     <module>api</module>
-    <!--<module>client</module>-->
     <module>server</module>
+      <!--<module>client</module>-->
     <!--<module>exchange</module>-->
   </modules>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>parent-pom</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>Chronicle-Accelerate/Parent-Pom</name>
   <description>Chronicle-Accelerate (XCL) Parent Pom</description>
