--- a/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
@@ -15,6 +15,6 @@ commandFailedEvent: {
   origSourceAddress: 2,
   origEventTime: 12345678900000,
   origMessageType: 32,
-  reason: "java.lang.IllegalArgumentException: Address {-2419021951110769737=;j'\xBC\xCE\xB6\xA4-b\xA3\xA8\xD0*o\rse2\x15w\x1D\xE2C\xA6:\xC0H\xA1\x8BY\xDA)} already taken"
+  reason: "java.lang.IllegalArgumentException: Address !cash.xcl.util.KolobokeXCLLongObjMap {\n  ? -2419021951110769737: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=\n}\n already taken"
 }
 ---
