--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,6 +12,11 @@
     <description>Chronicle-Accelerate Server</description>
     <dependencies>
         <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-wire</artifactId>
+            <version>1.11.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>cash.xcl</groupId>
             <artifactId>api</artifactId>
             <version>${project.version}</version>
