--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,8 +13,13 @@
     <dependencies>
         <dependency>
             <groupId>net.openhft</groupId>
+            <artifactId>chronicle-bytes</artifactId>
+            <version>1.11.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
             <artifactId>chronicle-wire</artifactId>
-            <version>1.11.0-SNAPSHOT</version>
+            <version>1.11.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cash.xcl</groupId>
