Fixed OutOfMemory error - RegionalServerBenchmarkMain test. Added CurrentBalanceQuery and ExchangeRateQuery. Un-ignored tests.

--- a/server/src/test/resources/post-block-chain/opening-balance-fails-bcz-already-set/out.yaml
+++ b/server/src/test/resources/post-block-chain/opening-balance-fails-bcz-already-set/out.yaml
@@ -1,7 +1,7 @@
 ---
 to: 2
 commandFailedEvent: {
-  sourceAddress: 1,
+  sourceAddress: 123123123123,
   eventTime: 12345678920000,
   origSourceAddress: 2,
   origEventTime: 12345678900000,
