--- a/server/src/test/resources/post-block-chain/transfer-value-bcz-unknown-dest-address/out.yaml
+++ b/server/src/test/resources/post-block-chain/transfer-value-bcz-unknown-dest-address/out.yaml
@@ -1,7 +1,7 @@
 ---
 to: 4444
 commandFailedEvent: {
-  sourceAddress: 1,
+  sourceAddress: 123123123123,
   eventTime: 12345678920000,
   origSourceAddress: 4444,
   origEventTime: 12345678920000,
