--- a/server/src/test/resources/post-block-chain/transfer-value/out.yaml
+++ b/server/src/test/resources/post-block-chain/transfer-value/out.yaml
@@ -2,7 +2,7 @@
 ---
 to: 4444
 transferValueEvent: {
-  sourceAddress: 1,
+  sourceAddress: 123123123123,
   eventTime: 12345678920000,
   transferValueCommand: {
     sourceAddress: 4444,
