Use unsigned short for protocol, message type double for quantity add the original protocol number for appropriate errors.

--- a/server/src/test/resources/post-block-chain/current-balance-query-fails/out.yaml
+++ b/server/src/test/resources/post-block-chain/current-balance-query-fails/out.yaml
@@ -4,6 +4,7 @@ queryFailedResponse: {
   eventTime: 12345678920000,
   origSourceAddress: 2,
   origEventTime: 0,
+  origProtocol: 1,
   origMessageType: 77,
   reason: "java.lang.Exception: AccountService does not have a balance for account = 0"
 }
