--- a/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
@@ -14,6 +14,7 @@ commandFailedEvent: {
   eventTime: 12345678910000,
   origSourceAddress: 2,
   origEventTime: 12345678900000,
+  origProtocol: 1,
   origMessageType: 32,
   reason: "java.lang.IllegalArgumentException: Address !cash.xcl.util.KolobokeXCLLongObjMap {\n  ? -2419021951110769737: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=\n}\n already taken"
 }
