--- a/server/src/test/resources/post-block-chain/opening-balance-fails-bcz-already-set/out.yaml
+++ b/server/src/test/resources/post-block-chain/opening-balance-fails-bcz-already-set/out.yaml
@@ -5,6 +5,7 @@ commandFailedEvent: {
   eventTime: 12345678920000,
   origSourceAddress: 2,
   origEventTime: 12345678900000,
+  origProtocol: 1,
   origMessageType: 5,
   reason: "java.lang.IllegalArgumentException: Unable to set opening balance. Balance is already set for address 4444"
 }
