--- a/server/src/test/resources/post-block-chain/transfer-value-fails-bcz-not-enough-balance/out.yaml
+++ b/server/src/test/resources/post-block-chain/transfer-value-fails-bcz-not-enough-balance/out.yaml
@@ -6,6 +6,7 @@ commandFailedEvent: {
   eventTime: 12345678910000,
   origSourceAddress: 4444,
   origEventTime: 12345678920000,
+  origProtocol: 1,
   origMessageType: 64,
   reason: "java.lang.IllegalArgumentException: Invalid transfer: trying to transfer XCL100000.0 from account: 4444 but balance is only: 1000.0"
 }
