--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>net</module>
         <module>api</module>
         <module>server</module>
+        <module>custom</module>
         <!--<module>client</module>-->
         <!--<module>exchange</module>-->
     </modules>
