--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,21 @@
                   </configuration>
                 </execution>
               </executions>
+              </plugin>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>cash.xcl.server.mock.ServerJVM</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>            
             </plugin>
+            
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
