--- a/server/src/test/resources/post-block-chain/create-new-address-fails/in.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address-fails/in.yaml
@@ -3,7 +3,7 @@ createNewAddressCommand: {
   eventTime: 12345678900000,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=,
   region: usny,
-  newAddressSeed: -2419021951110769737
+  newAddressSeed: usny951110769
 }
 ---
 createNewAddressCommand: {
@@ -11,5 +11,5 @@ createNewAddressCommand: {
   eventTime: 12345678900000,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2it=,
   region: usny,
-  newAddressSeed: -2419021951110769737
+  newAddressSeed: usny951110769
 }
