--- a/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
@@ -4,7 +4,7 @@ createNewAddressEvent: {
   eventTime: 12345678910000,
   origSourceAddress: 2,
   origEventTime: 12345678900000,
-  address: -2419021951110769737,
+  address: usny951110769,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=
 }
 ---
@@ -16,6 +16,6 @@ commandFailedEvent: {
   origEventTime: 12345678900000,
   origProtocol: 1,
   origMessageType: 32,
-  reason: "java.lang.IllegalArgumentException: Address !cash.xcl.util.KolobokeXCLLongObjMap {\n  ? -2419021951110769737: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=\n}\n already taken"
+  reason: "java.lang.IllegalArgumentException: Address !cash.xcl.util.KolobokeXCLLongObjMap {\n  ? -2419026099967619484: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=\n}\n already taken"
 }
 ---
