Fix encoded base32 to be lower case letters by default.

--- a/server/src/test/resources/post-block-chain/create-new-address/in.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address/in.yaml
@@ -3,5 +3,5 @@ createNewAddressCommand: {
   eventTime: 0,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=,
   region: usny,
-  newAddressSeed: usny241902195
+  newAddressSeed: usny24lqo2lq4
 }
