--- a/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address-fails/out.yaml
@@ -4,7 +4,7 @@ createNewAddressEvent: {
   eventTime: 12345678910000,
   origSourceAddress: 2,
   origEventTime: 12345678900000,
-  address: usny951110769,
+  address: usnyq5llloz6x,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=
 }
 ---
