--- a/server/src/test/resources/post-block-chain/create-new-address/out.yaml
+++ b/server/src/test/resources/post-block-chain/create-new-address/out.yaml
@@ -4,7 +4,7 @@ createNewAddressEvent: {
   eventTime: 12345678920000,
   origSourceAddress: 2,
   origEventTime: 0,
-  address: usny241902195,
+  address: usny24lqo2lq4,
   publicKey: !!binary O2onvM62pC1io6jQKm8Nc2UyFXcd4kOmOsBIoYtZ2ik=
 }
 ---
