--- a/docgen/pom.xml
+++ b/docgen/pom.xml
@@ -1,60 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>parent-pom</artifactId>
-    <groupId>cash.xcl</groupId>
-    <version>0.1.0-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>docgen</artifactId>
-  <name>Chronicle-Accelerate Documentation Generator</name>
-  <description>Chronicle-Accelerate DocGen</description>
-  <dependencies>
-    <dependency>
-              <groupId>net.openhft</groupId>
-              <artifactId>chronicle-wire</artifactId>
-          </dependency>
-  
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-javadoc-plugin</artifactId>
-    <version>2.9</version>
-    <configuration>
-        <source>1.8</source>
-        <doclet>org.asciidoctor.Asciidoclet</doclet>
-        <docletArtifact>
-            <groupId>org.asciidoctor</groupId>
-            <artifactId>asciidoclet</artifactId>
-            <version>1.5.4</version>
-        </docletArtifact>
-        <overview>src/main/java/overview.adoc</overview>
-        <additionalparam>
-          --base-dir ${project.basedir}
-          --attribute "name=${project.name}"
-          --attribute "version=${project.version}"
-          --attribute "title-link=http://example.com[${project.name} ${project.version}]"
-        </additionalparam>
-    </configuration>
-</plugin>
-      <plugin>
-        <groupId>org.pitest</groupId>
-        <artifactId>pitest-maven</artifactId>
-        <version>1.2.5</version>
-        <configuration>
-          <verbose>false</verbose>
-          <enableAssertions>true</enableAssertions>
-          <targetClasses>
-            <param>cash.xcl.api.exch*</param>
-          </targetClasses>
-          <targetTests>
-            <param>cash.xcl.api.exch*</param>
-             <param>cash.xcl.api.MarshalingTest</param>
-          </targetTests>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>parent-pom</artifactId>
+        <groupId>cash.xcl</groupId>
+        <version>0.1.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>docgen</artifactId>
+    <name>Chronicle-Accelerate Documentation Generator</name>
+    <description>Chronicle-Accelerate DocGen</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-wire</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <source>1.8</source>
+                    <doclet>org.asciidoctor.Asciidoclet</doclet>
+                    <docletArtifact>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoclet</artifactId>
+                        <version>1.5.4</version>
+                    </docletArtifact>
+                    <overview>src/main/java/overview.adoc</overview>
+                    <additionalparam>
+                        --base-dir ${project.basedir}
+                        --attribute "name=${project.name}"
+                        --attribute "version=${project.version}"
+                        --attribute "title-link=http://example.com[${project.name} ${project.version}]"
+                    </additionalparam>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.2.5</version>
+                <configuration>
+                    <verbose>false</verbose>
+                    <enableAssertions>true</enableAssertions>
+                    <targetClasses>
+                        <param>cash.xcl.api.exch*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>cash.xcl.api.exch*</param>
+                        <param>cash.xcl.api.MarshalingTest</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
