--- a/pom.xml
+++ b/pom.xml
@@ -31,19 +31,18 @@
         <module>net</module>
         <module>api</module>
         <module>server</module>
-        <module>custom</module>
-        <!--<module>client</module>-->
-        <!--<module>exchange</module>-->
     </modules>
     <version>0.1.0-SNAPSHOT</version>
     <name>Chronicle-Accelerate/Parent-Pom</name>
     <description>Chronicle-Accelerate (XCL) Parent Pom</description>
     <packaging>pom</packaging>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <compiler.argument>-Xlint:deprecation</compiler.argument>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -53,15 +52,17 @@
                 <version>3.6.2</version>
                 <scope>import</scope>
             </dependency>
+
             <dependency>
                 <groupId>net.openhft</groupId>
                 <artifactId>chronicle-bom</artifactId>
-                <version>1.15.128</version>
+                <version>1.15.238-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
 
         <dependency>
@@ -75,23 +76,26 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>chronicle-salt</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
         <!-- test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -162,10 +166,10 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.2.5</version>
+                <version>1.3.2</version>
                 <configuration>
                     <verbose>false</verbose>
-                    <enableAssertions>true</enableAssertions>
+                    <!--<enableAssertions>true</enableAssertions>-->
                 </configuration>
             </plugin>
             <plugin>
