--- a/docgen/pom.xml
+++ b/docgen/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>parent-pom</artifactId>
-        <groupId>cash.xcl</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <groupId>im.xcl</groupId>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>docgen</artifactId>
