--- a/examples/appreciation/pom.xml
+++ b/examples/appreciation/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>examples-appreciation</artifactId>
+    <artifactId>appreciation</artifactId>
     <name>Chronicle-Accelerate/Examples/Appreciation</name>
     <description>Chronicle-Accelerate Examples Appreciation</description>
 
