--- a/platform2/pom.xml
+++ b/platform2/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>chronicle-bytes</artifactId>
         </dependency>
         <dependency>
+            <groupId>im.xcl</groupId>
+            <artifactId>net</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>im.xcl</groupId>
+            <artifactId>util</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>chronicle-salt</artifactId>
             <version>1.0.2-SNAPSHOT</version>
