--- a/platform2/pom.xml
+++ b/platform2/pom.xml
@@ -10,8 +10,8 @@
     <groupId>im.xcl</groupId>
     <artifactId>platform2</artifactId>
     <version>0.2.0-SNAPSHOT</version>
-    <name>Chronicle-Accelerate/Server</name>
-    <description>Chronicle-Accelerate Server</description>
+    <name>Chronicle-Accelerate/Platform</name>
+    <description>Chronicle-Accelerate Platform</description>
 
     <dependencies>
         <dependency>
