--- a/examples/appreciation/src/test/resources/give/one/in.yaml
+++ b/examples/appreciation/src/test/resources/give/one/in.yaml
@@ -1,12 +1,7 @@
-startBatch: {
-  batchKey: !!binary RWUHCYzTzADL+4kJ9r90rWHBo6J/Wng5FmlXFjv8bd8=,
-  batchTimeUS: "1970-01-01T00:00:00"
-}
----
 give: {
-  publicKey: !!binary Sq1s3liIh6LkceZYP+qh6MlMRRqCNJ5Dvl9oyAiZHe8=,
+  timestampUS: "2018-08-08T08:45:11.853",
+  address: "3be2ef2f0dc4f5c6",
+  publicKey: "",
+  receiverAddress: "15df942555c080f8",
   amount: 20.0
 }
----
-endBatch: ""
----
