--- a/examples/appreciation/src/test/resources/give/one/setup.yaml
+++ b/examples/appreciation/src/test/resources/give/one/setup.yaml
@@ -1,17 +1,14 @@
-startBatch: {
-  batchKey: !!binary RWUHCYzTzADL+4kJ9r90rWHBo6J/Wng5FmlXFjv8bd8=,
-  batchTimeUS: "1970-01-01T00:00:00"
-}
----
 openingBalance: {
-  publicKey: !!binary RWUHCYzTzADL+4kJ9r90rWHBo6J/Wng5FmlXFjv8bd8=,
+  timestampUS: "2018-08-08T08:45:11.812",
+  address: "3be2ef2f0dc4f5c6",
+  account: !!binary 7zoiDZyRsD6NtcCYfio0Ib/OZMu//YwoxvXEDS/v4js=,
   amount: 100.0
 }
 ---
 openingBalance: {
-  publicKey: !!binary Sq1s3liIh6LkceZYP+qh6MlMRRqCNJ5Dvl9oyAiZHe8=,
-  amount: 10.0
+  timestampUS: "2018-08-08T08:45:11.852699",
+  address: "3be2ef2f0dc4f5c6",
+  account: !!binary TP0dH4vSlkaoAbaqtrG2O/71rYJvleE3+IDAVSWU3xU=,
+  amount: 30.0
 }
----
-endBatch: ""
 ---
